--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Number Shape</h1>
 	<button onclick="start()">Start</button>
-	<script src="files/script.js" defer></script>
+	<script src="files/script.js"></script>
     <div id="show"></div><br><br>
 	
 <br>
